Delivering_Azure_Infrastructure_using_Code_and_Modern_Development_Practices/infrastructure/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "systemCode": {
            "defaultValue": "iag",
            "type": "String"
        },
        "adminUsername": {
            "defaultValue": "wacowner",
            "type": "String"
        },
        "adminPassword": {
            "type": "securestring"
        }
    },
    "variables": {
        "virtualMachines_workshop_vm_name": "[concat('workshop-',parameters('systemCode'),'-vm')]",
        "virtualNetworks_workshop_vnet_name": "[concat('workshop-',parameters('systemCode'),'-vnet')]",
        "networkInterfaces_workshop_vm_name": "[concat('workshop-',parameters('systemCode'),'-vm86')]",
        "publicIPAddresses_workshop_vm_ip_name": "[concat('workshop-',parameters('systemCode'),'-vm-ip')]",
        "networkSecurityGroups_workshop_vm_nsg_name": "[concat('workshop-',parameters('systemCode'),'-vm-nsg')]",
        "subnets_default_name": "default",
        "securityRules_HTTPS_name": "HTTPS",
        "extensions_Microsoft.Powershell.DSC_name": "Microsoft.Powershell.DSC"
    },
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[variables('virtualMachines_workshop_vm_name')]",
            "apiVersion": "2017-12-01",
            "location": "westus2",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(variables('virtualMachines_workshop_vm_name'),'_OsDisk_1_d3b46fb600b948be953fc59fec395528')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('virtualMachines_workshop_vm_name')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "adminPassword": "[parameters('adminPassword')]",
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_workshop_vm_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaces_workshop_vm_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[variables('networkInterfaces_workshop_vm_name')]",
            "apiVersion": "2018-02-01",
            "location": "westus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "0530b3f5-f437-4ced-9994-fd5787891c86",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"9315d25e-d84e-45f5-8940-4c27016ccecb\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "172.16.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_workshop_vm_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_workshop_vnet_name'), variables('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "c2l0p0q5qqmuljfwshaiuqkwja.xx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-F7-F0-13",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_workshop_vm_nsg_name'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresses_workshop_vm_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworks_workshop_vnet_name'), variables('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_workshop_vm_nsg_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('networkSecurityGroups_workshop_vm_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "westus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "d2d0289f-40da-4d88-aac4-fb08f58dac51",
                "securityRules": [
                    {
                        "name": "HTTPS",
                        "etag": "W/\"fc7d3b06-f7e6-464d-98b3-641f3ac1bf06\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"fc7d3b06-f7e6-464d-98b3-641f3ac1bf06\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"fc7d3b06-f7e6-464d-98b3-641f3ac1bf06\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"fc7d3b06-f7e6-464d-98b3-641f3ac1bf06\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"fc7d3b06-f7e6-464d-98b3-641f3ac1bf06\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"fc7d3b06-f7e6-464d-98b3-641f3ac1bf06\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"fc7d3b06-f7e6-464d-98b3-641f3ac1bf06\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[variables('publicIPAddresses_workshop_vm_ip_name')]",
            "apiVersion": "2018-02-01",
            "location": "westus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "5f964241-2d66-46c0-88ce-b517b4fe1d12",
                "ipAddress": "13.66.154.14",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworks_workshop_vnet_name')]",
            "apiVersion": "2018-02-01",
            "location": "westus2",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "eaa71717-841f-4519-a4b6-91c08a415648",
                "addressSpace": {
                    "addressPrefixes": [
                        "172.16.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"43599d01-2cf1-4344-8fc8-3d064dbdef83\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "172.16.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(variables('virtualMachines_workshop_vm_name'), '/', variables('extensions_Microsoft.Powershell.DSC_name'))]",
            "apiVersion": "2017-12-01",
            "location": "westus2",
            "scale": null,
            "properties": {
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "ModulesUrl": "https://github.com/IAG-NZ/Workshop.Infrastructure/raw/master/dsc/dscfiles.zip",
                    "ConfigurationFunction": "DSCConfiguration.ps1\\WindowsAdminCenter",
                    "Properties": "",
                    "WmfVersion": "latest",
                    "Privacy": {
                        "DataCollection": "Enable"
                    }
                },
                "publisher": "Microsoft.Powershell",
                "type": "DSC",
                "typeHandlerVersion": "2.76",
                "protectedSettings": {}
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', variables('virtualMachines_workshop_vm_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(variables('networkSecurityGroups_workshop_vm_nsg_name'), '/', variables('securityRules_HTTPS_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_workshop_vm_nsg_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(variables('virtualNetworks_workshop_vnet_name'), '/', variables('subnets_default_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "172.16.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworks_workshop_vnet_name'))]"
            ]
        }
    ]
}
